# swagger-output.json
@@ -362,7 +362,7 @@
         }
       }
     },
-    "/api/groups/{groupId}/students/{studentId}": {
+    "/api/groups/{groupId}/students": {
       "post": {
         "description": "",
         "parameters": [
@@ -373,23 +373,26 @@
             "type": "string"
           },
           {
-            "name": "studentId",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
             "name": "authorization",
             "in": "header",
             "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "studentIds": {
+                  "example": "any"
+                }
+              }
+            }
           }
         ],
         "responses": {
           "200": {
             "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
           },
           "401": {
             "description": "Unauthorized"
@@ -401,7 +404,9 @@
             "description": "Internal Server Error"
           }
         }
-      },
+      }
+    },
+    "/api/groups/{groupId}/students/{studentId}": {
       "delete": {
         "description": "",
         "parameters": [
